--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
 
-    <title>2048</title>
+    <title>2048 - Rod</title>
   </head>
   <!-- contains the actual content of the HTML file that are visible in the webpage. -->
   <body>
